# Homework

./: .clang-format  CMakeLists.txt  Dockerfile  Interpolation  README.md
.github/workflows/: build.yml
Homework-01/: CMakeLists.txt
Homework-01/hello/: Main.cpp
Homework-01/hello-with-library/lib/include/: lib.h
Homework-01/hello-with-library/lib/src/: lib.cpp
Homework-01/hello-with-library/src/: main-hello.cpp
Homework-01/lib/: CMakeLists.txt
Homework-01/lib/src/: lib.cpp
Homework-01/src/: main-hello.cpp
Homework-02/: CMakeLists.txt
Homework-02/src/: main.cpp
homework-01/: CMakeLists.txt
homework-01/hello/: CMakeLists.txt
homework-01/hello-with-library/lib/: CMakeLists.txt
homework-02/: CMakeLists.txt
homework-02-test-dynapi/: CMakeLists.txt
homework-02-test-dynapi/src/: main.cpp
homework-02/src/: main.cpp
homework-03/: CMakeLists.txt
homework-03/01-simple-loop/: CMakeLists.txt  main.cpp
homework-03/02-engine-static/: CMakeLists.txt  engine.h
homework-03/03-engine-shared/: CMakeLists.txt  engine.cpp  engine.h  game.cpp
homework-03/04-engine-hot-reload/: CMakeLists.txt  engine.cpp  engine.h  game.cpp
homework-04/: CMakeLists.txt
homework-04/include/: 00_canvas.h  01_line.h  02_triangle.h  03_gfx_program.h
homework-04/src/: 00_canvas.cpp  00_canvas_main.cpp  01_line.cpp  01_line_main.cpp  02_triangle.cpp  02_triangle_main.cpp  03_gfx_program.cpp  03_gfx_program_main.cpp
homework-05/: CMakeLists.txt
homework-05/opengl-gxf-program/: CMakeLists.txt  FragmentShader.txt  VertexShader.txt  engine.cpp  engine.h  game.cpp
homework-05/opengl-min/: CMakeLists.txt  engine.cpp  engine.hpp  game.cpp
homework-05/opengl-triangle/: CMakeLists.txt  engine.cpp  engine.hpp  fragment_shader.txt  game.cpp  vertex_shader.txt
homework-06/opengl-morphing/: CMakeLists.txt  engine.cpp  engine.hpp  game.cpp  vertex_shader.txt
homework-06/opengl-move-tank/: CMakeLists.txt  engine.cpp  engine.hpp  fragment_shader.txt  game.cpp  my_math.hpp  vertex_shader.txt
homework-06/opengl-move-tank/glad/: glad.h
homework-06/opengl-texture/: CMakeLists.txt  engine.cpp  engine.hpp  fragment_shaderTEX.txt  game.cpp  vertex_shaderTEX.txt
homework-06/opengl-texture/glad/: glad.c
